# openspp-packaging

./: .gitignore  .isort.cfg  BUILD_PROCESS.md  CONTRIBUTING.md  DEPENDENCIES-VERIFICATION.md  FIXES_APPLIED.md  IMPROVEMENTS_IMPLEMENTED.md  LICENSE  MANIFEST.in  PACKAGING.md  PUBLISHING.md  QUICKSTART.md  README.md  TESTING.md  dependencies.lock.yaml  dependencies.yaml  docker-requirements.txt  pyproject.toml  quick-fix.sh  requirements-dev.txt  requirements.in  requirements.txt  run-minimal-test.sh  setup-env.sh  setup.py  test-local.sh  test-minimal.yaml  test-quick.sh  vendorize.py
.github/: SECRETS.md  dependabot.yml  release.yml
.github/workflows/: build-packages.yml  build.yml  ci.yml  manual-release.yml  publish.yml  release.yml  security-scan.yml  tag-release.yml  weekly-release.yml
openspp/: __init__.py  release.py
openspp/addons/: .gitkeep
scripts/: build-all.sh  fetch-modules.sh  publish.sh  test-install.sh
setup/: openspp  package.py
setup/debian/: changelog  control  postinst  postrm  prerm  rules
setup/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  openspp.conf
setup/rpm/: openspp.spec
setup/windows/: Dockerfile.wine  build-with-docker.sh  openspp-server.bat  openspp-shell.bat  openspp.nsi  setup-wine.sh
