[project]
name = "openspp-packaging"
version = "17.0.0"
description = "OpenSPP packaging infrastructure"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
