[project]
name = "openspp"
dynamic = ["version", "description", "readme", "license", "authors", "classifiers", "dependencies", "scripts", "entry-points"]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
